--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.8">
-<title>Message for you</title <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weathering With You</title>
 </head>
 <body>
-<div class="wrapper">
-<h2 class="question" You like me?</h2>
-<img class="gif" alt="gif
-src="https://raw.githubusercontent.com/Dzare Developer/Ing/main/gifyou.webp <div class="btn-group"> <button class="yes-btn">Yes</button> <button class="no-
-btn-No</button>
-</div>
-</div>
-<script src="script.js"></script>
+    <header>
+        <h1>Artikel Weathering with you</h1>
+        <p>Oleh: Anrai Harika Harpan</p>
+    </header>
+    <main>
+        <figure>
+            <img src="Ghibli.jpg" 
+            width="250" 
+            height="250"/> 
+            "Weathering With You(Tenki No Ko.)"
+            <figcaption>"Cuaca yang Terhempas Cinta: Eksplorasi Romantis dan Perjuangan dalam 'Weathering With You'. Hodaka dan Hina, dua jiwa yang terjebak dalam badai kehidupan, menunjukkan bahwa cinta sejati bersinar terang di tengah cuaca buruk. Sebuah kisah penuh emosi tentang tekad, pengorbanan, dan keberanian untuk mempertahankan cinta di dunia yang terus berubah."</figcaption>
+        </figure>
+        <article>
+            <p>Artikel 1: "Romansa yang Mendalam dalam Weathering With You"Dalam "Weathering With You," Makoto Shinkai menciptakan kisah romansa yang penuh dengan nuansa emosional dan perjuangan. Tokoh utama, Hodaka Morishima, dan Hina Amano menemukan cinta mereka dalam konteks situasi yang sulit. Artikel ini akan menjelajahi bagaimana kedua karakter ini membangun hubungan mereka, melewati rintangan, dan mengekspresikan cinta mereka di tengah-tengah cuaca yang tak terduga. Hodaka, seorang remaja yang melarikan diri dari rumahnya, bertemu Hina, seorang gadis dengan kemampuan khusus untuk mengendalikan cuaca. Keterlibatan keduanya diwarnai oleh momen-momen yang romantis dan penuh haru. Kepahitan kehidupan yang dihadapi Hodaka dan kekuatan ajaib Hina membentuk dasar romansa yang tidak biasa namun mendalam. Namun, kisah cinta mereka tidak lepas dari perjuangan. Cuaca yang tidak terduga menjadi simbol perubahan dan tantangan bagi hubungan mereka. Artikel ini akan mengulas momen-momen krusial dalam film di mana cinta Hodaka dan Hina diuji oleh keadaan, serta bagaimana mereka bersama-sama mengatasi setiap rintangan.
+</p>
+            <p>Artikel 2: 
+            "Perjuangan Mempertahankan Cinta dalam Weathering With You" Dalam sekuel artikel ini, kita akan fokus pada perjuangan Hodaka dan Hina untuk mempertahankan hubungan mereka di tengah berbagai tekanan dan keterbatasan. Cuaca yang tidak stabil menjadi refleksi dari ketidakpastian hidup, dan keduanya harus menghadapi konsekuensi pilihan yang mereka buat.Kita akan menjelajahi bagaimana Hodaka dan Hina, meskipun dihadapkan pada situasi yang sulit, tetap kuat dan setia satu sama lain. Kisah ini menggambarkan pentingnya tekad dan ketekunan dalam mempertahankan cinta, bahkan ketika segala sesuatunya tampak sulit.Artikel ini akan mencakup momen-momen dramatis di mana karakter-karakter utama menghadapi pilihan sulit, pengorbanan, dan bagaimana cinta mereka menjadi pendorong untuk mengatasi semua rintangan. Keseluruhan, "Weathering With You" memberikan pandangan mendalam tentang bagaimana cinta dapat tumbuh dan bertahan di tengah badai kehidupan yang tidak terduga.</p>
+            <!-- Anda dapat menambahkan lebih banyak paragraf sesuai keinginan -->
+        </article>
+    </main>
+    <footer>
+        <p>&copy; 2024 Web anrai. Hak cipta dilindungi.</p>
+    </footer>
 </body>
 </html>
